# AgensFlow

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: 01_evidence_heavy_end_to_end.py  02_policy_learning_demo.py  README.md
experiments/: README.md
experiments/e01_regime_validation/: README.md  RESULTS.md  baselines.py  grader.py  harness.py  results_raw.jsonl  run.py  tasks.py
experiments/e02_cost_over_time/: README.md  RESULTS.md  harness.py  policy_graph.pkl  results_raw.jsonl  run.py
experiments/e03_production_traffic/: RESULTS.md  activation.py  baseline.py  corpus.py  harness.py  policy_graph.pkl  results_agensflow.jsonl  results_baseline.jsonl  run.py  tasks.py
experiments/e04_sustained_traffic/: RESULTS.md  __init__.py  results_agensflow.jsonl  run.py
experiments/e04_sustained_traffic/ablation_lambda0/: RESULTS.md  policy_graph.pkl  results_agensflow.jsonl
experiments/e04_sustained_traffic/snapshots/: policy_graph_epoch_01.pkl  policy_graph_epoch_02.pkl  policy_graph_epoch_03.pkl  policy_graph_epoch_04.pkl  policy_graph_epoch_05.pkl  policy_graph_epoch_06.pkl  policy_graph_epoch_07.pkl  policy_graph_epoch_08.pkl
experiments/e05_topology_skip/: RESULTS.md  __init__.py  policy_graph.pkl  results_agensflow.jsonl  run.py
experiments/e05_topology_skip/smoke_cold/: results_agensflow.jsonl
experiments/e05_topology_skip/smoke_warm/: RESULTS.md  policy_graph.pkl  results_agensflow.jsonl
experiments/e05_topology_skip/snapshots/: policy_graph_epoch_01.pkl  policy_graph_epoch_02.pkl  policy_graph_epoch_03.pkl  policy_graph_epoch_04.pkl  (+3 more)
experiments/e06_cross_eval/: RESULTS.md  __init__.py  aggregates.json  results.jsonl  run.py
experiments/e07_skill_variants/: RESULTS.md  __init__.py  activation.py  analyze.py  example_config.yaml  replay_rescore.py  results_agensflow.jsonl  run.py  subset_validation.yaml
experiments/e09_cross_domain_security/: RESULTS.md  activation.py  baseline_fixed.py  corpus.py  example_config.yaml  replay_rescore.py  replay_rescore_results.jsonl  results_agensflow.jsonl  run.py  session_report.json  tasks.py
scripts/: probe_qwen_judge.py
skills/: solver_chain_of_thought.md  solver_concise.md  solver_default.md  solver_evidence_first.md
src/agensflow/: __init__.py  registry.py  schema.py
tests/: test_activation.py  test_agent_outputs.py  test_chunk9_runner_config.py  test_client_hooks.py  test_config_loader.py  test_governance.py  test_harness_governance.py  test_hybrid_reward.py  test_learning.py  test_preflight.py  test_regime.py  test_report.py  test_router.py  test_ruler.py  test_ruler_cross_judge.py  test_ruler_evidence.py  test_ruler_per_axis.py  test_schema.py  test_skills.py  test_ucb_v2.py  test_web_search_retry.py
(+2166 files in other folders)
