[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "agensflow"
version = "0.1.0"
description = "Coordination as a learnable object: regime-conditioned orchestration for multi-agent systems."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Nicole Königstein" },
]
keywords = [
    "multi-agent",
    "orchestration",
    "agents",
    "llm",
    "coordination",
    "policy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6",
    "typing-extensions>=4.9",
    # Runtime (chunk 2): real LLM execution via OpenRouter, orchestrated by LangGraph.
    # Instructor enforces typed I/O against per-agent Pydantic schemas; the OpenAI SDK
    # provides transport (built-in retries on transient errors) via OpenRouter.
    "langgraph>=0.2.50",
    "openai>=1.40",
    "instructor>=1.10",
    "python-dotenv>=1.0",
    # HTTP + YAML — used by tool wrappers (web_search) and SKILL.md parsing.
    "httpx>=0.27",
    "pyyaml>=6.0",
    # Configuration: per-module YAML defaults + structured schema validation.
    # OmegaConf is the layer Hydra is built on; we use it directly to keep the
    # framework library-friendly without forcing the full Hydra runtime on users.
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.4",
]
viz = [
    # Streamlit-based interactive visualizer for chunk-6+ experiment data.
    # Only needed if you want to launch `streamlit run viz/app.py`.
    "streamlit>=1.32",
    "pandas>=2.0",
    "altair>=5.0",
]

[project.urls]
Homepage = "https://agensflow.ai"
Repository = "https://github.com/agensflow-ai/agensflow"
Documentation = "https://agensflow.ai/docs"
Issues = "https://github.com/agensflow-ai/agensflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agensflow"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=agensflow --cov-report=term-missing"
